* Client/WebUI/Home: Fixed blocks SPB values on the chart, as the ones showed previously were not accurate
* Client/WebUI/Home: Added blocks Weight chart
* Client/WebUI/Miners: Shows version data only for the recent blocks (as BIP9 has not been used for awhile)
* Client: Fixed how the average TX fee is caluclated over "CFG.Stat.FeesBlks" (it was showing too low values)

1.10.2 - 2022-09-06:
* Client: New config value "Memory.CompressBlockDB" (default true)
* Client: New config value "UTXOSave.CompressRecords" (default false)
* Tools: utxo_compress and utxo_decompress have been fixed
* Wallet: "bip39" switch can now have value of "-1", in which case the seed password will be treated as mnemonic
* Wallet: New commands "-encrypt" and "-decrypt", for encrypting and decrypting files with wallet's seed (password)
* Client: fixed a bug that could cause chain sync to abort with series of "bad-txnmrklroot" errors
* Lib: Updated "lib/others/memory" to the recent version from "gitlab.com/cznic/memory" (old one could crash)
* Client: No more talking to peers that do not advertise segwit support (unless through the friends.txt file)
* Client/TextUI: "txdecode" shows sequence number of each input
* Client/WebUI/Wallet: Also shows spending the mempool transactions

1.10.1 - 2022-06-15
* btc.VerifyKeyPair() alos does Schnorr sign/verify on the given key pair
* Wallet: Make SchnorrSign nonce dependent not only on RNG but also on the hash being signed
* Wallet: When listing non-hardend HD wallet (like Elecrum), also output the root Extended Public Key
* Lib: Added "github.com/piotrnar/gocoin/lib/others/scrypt" package (for wallet - see below)
* Wallet: added new config value "scrypt" - use extra scrypt function to convert password into private keys
* Client: fixed the bug in the fix for the bandwidth limiter lock problem occuring when system time changing
* Client: cleaned up some non-leathal race conditions, reformatted some code, got rid of some warnings